--- a/terminal/src/terminal/terminalInterface.form
+++ b/terminal/src/terminal/terminalInterface.form
@@ -48,7 +48,7 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jComboBoxBaudrate" min="-2" pref="74" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="jComboBoxCOM" min="-2" max="-2" attributes="0"/>
+                  <Component id="jComboBoxCOM" min="-2" pref="74" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -85,6 +85,9 @@
                   <Color blue="32" green="28" red="28" type="rgb"/>
                 </Property>
                 <Property name="columns" type="int" value="20"/>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="MS Reference Sans Serif" size="12" style="0"/>
+                </Property>
                 <Property name="rows" type="int" value="5"/>
               </Properties>
             </Component>
@@ -123,11 +126,12 @@
         <Component class="javax.swing.JComboBox" name="jComboBoxBaudrate">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
+              <StringArray count="5">
                 <StringItem index="0" value="4800"/>
                 <StringItem index="1" value="9600"/>
-                <StringItem index="2" value="57600"/>
-                <StringItem index="3" value="115200"/>
+                <StringItem index="2" value="38400"/>
+                <StringItem index="3" value="57600"/>
+                <StringItem index="4" value="115200"/>
               </StringArray>
             </Property>
           </Properties>
@@ -138,9 +142,8 @@
         <Component class="javax.swing.JComboBox" name="jComboBoxCOM">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
-                <StringItem index="0" value="COM4"/>
-                <StringItem index="1" value="COM15"/>
+              <StringArray count="1">
+                <StringItem index="0" value="None"/>
               </StringArray>
             </Property>
           </Properties>
