--- a/terminal/src/terminal/terminalInterface.form
+++ b/terminal/src/terminal/terminalInterface.form
@@ -68,15 +68,17 @@
                   <Component id="jTextField1" min="-2" pref="25" max="-2" attributes="0"/>
                   <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" pref="581" max="32767" attributes="0"/>
-                  <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jCheckBoxAutoscroll" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jComboBoxBaudrate" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
-                      <Component id="jComboBoxCOM" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
-                      <Component id="jButtonClean" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jButtonReset" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
-                      <Component id="jCheckBoxShowTime" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jButtonClose" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jCheckBoxAutoscroll" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jComboBoxBaudrate" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
+                          <Component id="jComboBoxCOM" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
+                          <Component id="jCheckBoxShowTime" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jButtonReset" alignment="1" max="32767" attributes="0"/>
+                      </Group>
+                      <Component id="jButtonClose" min="-2" pref="24" max="-2" attributes="0"/>
+                      <Component id="jButtonClean" alignment="1" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
