--- a/terminal/src/terminal/terminalInterface.form
+++ b/terminal/src/terminal/terminalInterface.form
@@ -55,6 +55,8 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jButtonClose" min="-2" pref="67" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="jComboBoxInputEnding" min="-2" pref="74" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jComboBoxBaudrate" min="-2" pref="74" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jComboBoxCOM" min="-2" pref="74" max="-2" attributes="0"/>
@@ -67,20 +69,21 @@
               <Group type="102" alignment="0" attributes="0">
                   <Component id="jTextField1" min="-2" pref="25" max="-2" attributes="0"/>
                   <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                  <Component id="jScrollPane1" pref="581" max="32767" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jCheckBoxAutoscroll" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jScrollPane1" pref="580" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jCheckBoxAutoscroll" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jCheckBoxShowTime" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" alignment="3" groupAlignment="3" attributes="0">
+                          <Component id="jButtonClose" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
+                          <Component id="jComboBoxInputEnding" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
+                          <Component id="jButtonReset" alignment="3" max="32767" attributes="0"/>
+                          <Component id="jButtonClean" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jComboBoxBaudrate" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
                           <Component id="jComboBoxCOM" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
-                          <Component id="jCheckBoxShowTime" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButtonReset" alignment="1" max="32767" attributes="0"/>
                       </Group>
-                      <Component id="jButtonClose" min="-2" pref="24" max="-2" attributes="0"/>
-                      <Component id="jButtonClean" alignment="1" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -202,6 +205,21 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonCloseActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="jComboBoxInputEnding">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="4">
+                <StringItem index="0" value="None"/>
+                <StringItem index="1" value="CR"/>
+                <StringItem index="2" value="NL"/>
+                <StringItem index="3" value="CR &amp; NL"/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBoxInputEndingActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
