--- a/terminal/src/terminal/terminalInterface.form
+++ b/terminal/src/terminal/terminalInterface.form
@@ -69,21 +69,23 @@
               <Group type="102" alignment="0" attributes="0">
                   <Component id="jTextField1" min="-2" pref="25" max="-2" attributes="0"/>
                   <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                  <Component id="jScrollPane1" pref="580" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" pref="586" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jCheckBoxAutoscroll" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jCheckBoxShowTime" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" alignment="3" groupAlignment="3" attributes="0">
-                          <Component id="jButtonClose" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
-                          <Component id="jComboBoxInputEnding" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
-                          <Component id="jButtonReset" alignment="3" max="32767" attributes="0"/>
-                          <Component id="jButtonClean" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jComboBoxBaudrate" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
-                          <Component id="jComboBoxCOM" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                          <Component id="jButtonClose" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
+                          <Component id="jComboBoxInputEnding" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
+                          <Component id="jButtonReset" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
+                          <Component id="jButtonClean" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
+                          <Component id="jComboBoxBaudrate" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
+                          <Component id="jComboBoxCOM" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jCheckBoxAutoscroll" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jCheckBoxShowTime" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
