--- a/terminal/src/terminal/terminalInterface.form
+++ b/terminal/src/terminal/terminalInterface.form
@@ -41,14 +41,12 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jScrollPane1" pref="876" max="32767" attributes="0"/>
-              <Component id="jTextField1" alignment="0" max="32767" attributes="0"/>
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" alignment="1" attributes="0">
                   <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
                   <Component id="jCheckBoxAutoscroll" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jCheckBoxShowTime" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="193" max="32767" attributes="0"/>
                   <Component id="jButtonClean" min="-2" pref="67" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                   <Component id="jButtonReset" min="-2" pref="67" max="-2" attributes="0"/>
@@ -62,27 +60,32 @@
                   <Component id="jComboBoxCOM" min="-2" pref="74" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
+              <Component id="jScrollPane1" alignment="1" max="32767" attributes="0"/>
+              <Group type="102" attributes="0">
+                  <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
+                  <Component id="jTextField1" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
+              </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="jTextField1" min="-2" pref="25" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                  <Component id="jScrollPane1" pref="586" max="32767" attributes="0"/>
-                  <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                  <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
+                  <Component id="jTextField1" min="-2" pref="24" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
+                  <Component id="jScrollPane1" pref="575" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jCheckBoxAutoscroll" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jCheckBoxShowTime" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" alignment="3" groupAlignment="3" attributes="0">
                           <Component id="jButtonClose" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
                           <Component id="jComboBoxInputEnding" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
                           <Component id="jButtonReset" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
                           <Component id="jButtonClean" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
                           <Component id="jComboBoxBaudrate" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
                           <Component id="jComboBoxCOM" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jCheckBoxAutoscroll" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jCheckBoxShowTime" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
