--- a/terminal/src/terminal/terminalInterface.form
+++ b/terminal/src/terminal/terminalInterface.form
@@ -241,7 +241,7 @@
             <Component class="javax.swing.JTextPane" name="jTextPane1">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Microsoft Sans Serif" size="12" style="0"/>
+                  <Font name="MS Reference Sans Serif" size="12" style="0"/>
                 </Property>
               </Properties>
               <AuxValues>
