--- a/terminal/src/terminal/terminalInterface.form
+++ b/terminal/src/terminal/terminalInterface.form
@@ -110,7 +110,7 @@
               <Properties>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="MS Reference Sans Serif" size="12" style="0"/>
+                  <Font name="Segoe UI Historic" size="13" style="0"/>
                 </Property>
                 <Property name="rows" type="int" value="5"/>
               </Properties>
